Добавил обзор Каушинис

--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -113,6 +113,84 @@ this text as a template. This paragraph is formatted as an Abstract of the artic
 
 \section{WSD-методы с учителем}
 
+\section{<<Разрешение лексической многозначности методом ансамбля Байесовских классификаторов>>}
+
+\begin{flushright}
+\textit{А. Л. Чухарев, Т. В. Каушинис}
+\end{flushright}
+
+В статье \cite{Pedersen 2000} рассматривается подход к разрешению лексической многозначности слов (WSD), подразумевающий создание ансамбля Наивных Байесовских классификаторов, каждый из которых основан на оценке вероятности вхождения определенных слов в контекст целевого слова, значение которого определяется.
+\parindent=0,5cm
+
+При разрешении лексической многозначности, представленной как задача обучения с учителем, применяют статистические методы и методы машинного обучения к размеченному корпусу. В таких методах словам корпуса, для которых указано значение, соответствует набор лингвистических свойств. Алгоритм обучения строит модель классификатора значений по этим лингвистическим особенностям.
+\parindent=0,5cm
+
+Автор статьи \cite{Pedersen 2000} предлагает подход, основанный на объединении ряда простых классификаторов в ансамбль, который разрешает многозначность с помощью голосования простым большинством голосов. Педерсен утверждает \cite{Pedersen 2000}, что, во-первых, рассмотрение более сложного набора языковых особенностей или более сложных алгоритмов обычно не улучшает точность разрешения по сравнению с простыми языковыми особенностями, используемых в алгоритме обучения с учителем. Во-вторых, совместная встречаемость слов и словосочетаний имеет большее влияние на точность разрешения, оперирование такой лингвистической информацией как: часть речи или наличие отношений действие-объект.
+\parindent=0,5cm
+
+
+В рассматриваемой статье \cite{Pedersen 2000} в ансамбль объединяются Наивные Байесовские классификаторы. При таком подходе предполагается, что все переменные, участвующие в представлении проблемы, – условно независимы, при фиксированном значении переменной классификации. В проблеме разрешения лексической многозначности существует понятие контекста, в котором встречается многозначное слово. Он представляется в виде функции переменных $(F_1, F_2, \ldots , F_n)$, а значение многозначного слова представлено в виде классификационной переменной (S). Все переменные бинарные. Переменная, соответствующая слову из контекста, принимает значение ИСТИНА, если это слово находится на расстоянии определенного количества слов слева или справа от целевого слова. Совместная вероятность наблюдения определённой комбинации переменных контекста с конкретным значением слова выражается следующим образом: $p(F_1, F_2, \ldots , F_nS) = (p(S)\Pi^n_{i=1}p(F_i \vee S))$, где $p(S)$ и $p(F_i|S)$ -- параметры данной модели. Для оценки параметров достаточно знать частоты событий, описываемых взаимозависимыми переменными $(F_i,S)$. Эти значения соответствуют числу предложений, где слово, представляемое $F_i$, встречается в некотором контексте многозначного слова, упомянутого в значении $S$. Если возникают нулевые значения параметров, то они сглаживаются путём присвоения им по умолчанию очень маленького значения. После оценки всех параметров модель считается  обученной и может быть использована в качестве классификатора.
+\parindent=0,5cm
+
+Контекст в \cite{Pedersen 2000} представлен в виде bag-of-words (модель «мешка слов»). В этой модели выполняется следующая предобработка текста: удаляются знаки препинания, все слова переводятся в нижний регистр, все слова приводятся к их начальной форме (лемматизация). 
+В \cite{Pedersen 2000} контексты делятся на два окна: левое и правое. В первое попадают слова, встречающиеся слева от неоднозначного слова, и, соответственно, во второе -- встречающиеся справа.
+\parindent=0,5cm
+
+Окна контекстов могут принимать 9 различных размеров: 0, 1, 2, 3, 4, 5, 10, 25 и 50 слов. Первым шагом в ансамблевом подходе является обучение отдельных Наивных Байесовских классификаторов для каждого из 81 возможных сочетаний левого и правого размеров окон. В статье  \cite{Pedersen 2000} Наивный Байесовский классификатор $(l,r)$ включает в себя $l$ слов слева от неоднозначного слова и $r$ слов справа. Исключением является классификатор (0,0), который не включает в себя слов ни слева, ни справа. В случае нулевого контекста классификатору присваивается \textbf{априорная вероятность} многозначного слова (равная  вероятности  встретить наиболее употребимое значение).
+\parindent=0,5cm
+
+Следующий шаг в \cite{Pedersen 2000} при построении ансамбля -- это выбор классификаторов, которые станут членами ансамбля. 81 классификатор группируется в три общие категории, по размеру окна контекста. Используются три таких диапазона: узкий (окна шириной в 0, 1 и 2 слова), средний (3, 4, 5 слов), широкий (10, 25, 50 слов). Всего есть 9 возможных комбинаций, поскольку левое и правое окна отделены друг от друга. Например, Наивный Байес (1,3) относится к диапазону категории (узкий, средний) поскольку он основан на окне из одного слова слева и окне из трёх слов справа.  Наиболее точный классификатор в каждой из 9 категорий диапазонов выбирается для включения в ансамбль. Затем каждый из 9 членов классификаторов голосует за наиболее вероятное значение слова с учетом контекста. После этого ансамбль разрешает многозначность путем присвоения целевому слову значения, получившего наибольшее число голосов. 
+\parindent=0,5cm
+
+\textbf{Экспериментальные данные.} Для экспериментов были выбраны английские слова \textit{line} и \textit{interest.} Источником статистических данных по этим словам послужили работы \cite{Leacock 1993}, \cite{Bruce 1994}. В статье приводится информация о частоте использования шести значений для каждого из этих слов (Табл. ~\ref{tbl3}, Табл. ~\ref{tbl4}). 
+
+\begin{table}[H]
+\centering
+\caption{Число употреблений слова \textit{line} (столбец \textit{count}) для шести наиболее часто встречаемых значений (значения из тезауруса WordNet, столбец \textit{sense}) по данным корпусов \textit{ACL/DCI Wall Street Journal и American Printing House for the Blind}}
+\begin{tabular}{|c|c|}
+\hline
+sense & count\\
+\hline
+product & 2218\\
+written or spoken text & 405\\
+telephone connection & 429\\
+formation of people or things; queue & 349\\
+an artificial division; boundary & 376\\
+a thin, flexible object; cord & 371\\
+\hline
+total & 4148\\
+\hline
+\end{tabular}
+\label{tbl3}
+\end{table}
+
+\begin{table}[H]
+\centering
+\caption{Число употреблений слова \textit{interest} (столбец \textit{count}) для шести наиболее часто встречаемых значений (значения из словаря Longman Dictionary of Contemporary English, столбец \textit{sense}). Этот набор данных был получен в 1994 году Брюсом и Виебе \cite{Bruce 1994} путём указания значений для всех вхождений слова \textit{interest} в корпус ACL/DCI Wall Street Journal}
+\begin{tabular}{|c|c|}
+\hline
+sense & count\\
+\hline
+money paid for the use of money & 1252\\
+a share in a company or business & 500\\
+readiness to give attention & 361\\
+advantage, advancement or favor & 178\\
+activity that one gives attention to & 66\\
+causing attention to be given to & 11\\
+\hline
+total & 2368\\
+\hline
+\end{tabular}
+\label{tbl4}
+\end{table}
+
+
+\parindent=0,5cm
+\textbf{Результаты экспериментов.} Итогом проделанной работы стали обучение и проверка 81 Наивного Байесовского классификатора на многозначных словах \textit{line} и \textit{interest.} Точность разрешения лексической многозначности составила 89\% для слова \textit{interest} и 88\% для слова \textit{line.} В \cite{Pedersen 2000} было получено, что ансамбль классификаторов с голосованием простым большинством даёт более высокую точность, чем взвешенное голосование. Например, для слова \textit{interest} при голосовании простым большинством точность составила 89\%, а взвешенное голосование дало только 83\%.
+
+
+
+
 \section{<<WSD на основе нейронных сетей, построенных по данным машиночитаемых словарей>>}
 
 \begin{flushright}
@@ -555,6 +633,9 @@ Y=A_1x+A_2x^2+\ldots +A_nx^n.
 \bibitem{Berry 1993}
 \textit{M. Berry, T. Do, G. O’Brien, V. Krishna, and S. Varadhan}SVDPACK (version 1.0) user’s guide. Technical Report CS-93-194, University of Tennessee at Knoxville, Computer Science Department, April 1993.
 
+\bibitem{Bruce 1994}
+\textit{Bruce, R. and Wiebe, J.}Word-sense disambiguation using decomposable models. In Proceedings of the 32nd Annual Meeting of the Association for Computational Linguistics, 1994, pages 139–146.
+
 \bibitem{Ciaramita 2000}
 \textit{Ciaramita, M. and Johnson, M.}Explaining away ambiguity: Learning verb selectional preference with Bayesian networks. 2000. 
 
@@ -567,11 +648,17 @@ Y=A_1x+A_2x^2+\ldots +A_nx^n.
 \bibitem{Jain 1999}
 \textit{A. Jain, M. Murthy, and P. Flynn}Data clustering: a review. ACM Computing Surveys, 31(3):264-323, September 1999.
 
+\bibitem{Leacock 1993}
+\textit{C. Leacock, G. Towell, and E. Voorhees.}Corpus-based statistical sense resolution. In Proceedings of the ARPA Workshop on Human Language Technology, pages 260–265, March. 1993. 
+
 \bibitem{LESK 1986}
 \textit{LESK, M.}Automatic sense disambiguation using machine readable dictionaries: How to tell a pine cone from an ice cream cone --  Proceedings  of  the 5th SIGDOC. New York. 1986. P. 24–26.  
 
 \bibitem{Miller 1990}
 \textit{Miller, G.}Wordnet: An on-line lexical database. International Journal of Lexicography, 3(4). 1990.
+
+\bibitem{Pedersen 2000}
+\textit{Pedersen, T.}A Simple Approach to Building Ensembles of Naive Bayesian Classi?ers for Word Sense Disambiguation// Department of Computer Science, University of Minnesota Duluth.–2000.
 
 \bibitem{Pedersen 1997}
 \textit{Pedersen, T. and Bruce, R.}Distinguishing word senses in untagged text. Proc.EMNLP.Providence, RI, 1997.
