--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -11,8 +11,8 @@
 \rustitle{Обзор методов (уточнить - каких?) \newline по решению задачи разрешения лексической многозначности}
 \engtitle{Word-sense disambiguation methods (specific?) review}
 
-\rusauthor{С.~С.~Ткач, Е.~А.~Ярышкина, А.~Н.~Кирилов, И.~А.~Сихонина}
-\engauthor{S.~S.~Tkach, E.~A.~Yaryshkina, A.~N.~Kirilov, I.~A.~Sikhonina}
+\rusauthor{С.~С.~Ткач, Е.~А.~Ярышкина, А.~Н.~Кирилов, И.~А.~Сихонина, Н.~И.~Коржицкий}
+\engauthor{S.~S.~Tkach, E.~A.~Yaryshkina, A.~N.~Kirilov, I.~A.~Sikhonina, N.~I.~Korzhitsky}
 
 
 \organization{Институт прикладных математических исследований Карельского научного центра РАН}
@@ -112,6 +112,90 @@ this text as a template. This paragraph is formatted as an Abstract of the artic
 \efullwidth
 
 \section{WSD-методы с учителем}
+
+\section{<<Сравнительные эксперименты в WSD: роль предпочтений в машинном обучении>>}
+
+\begin{flushright}
+\textit{Н. И. Коржицкий}
+\end{flushright}
+
+В работе Рэймонда Муни \cite{Mooney 1996} представлено одно из первых сравнений разных по природе методов WSD на одних и тех же данных. В статье \cite{Mooney 1996} проведена серия экспериментов, в которых сравнивалась способность различных обучающихся алгоритмов определять значение слова в зависимости от контекста. Эксперимент состоял в определении одного из шести значений слова \textit{line} в различных контекста. Данные для проведения экспериментов взяты из работы \cite{Leacock 1993}.
+\parindent=0,5cm
+
+В машинном обучении под термином \textit{bias} (пристрастие, тенденция, предпочтение)  понимается любое основание для выбора одного обобщения другому, вместо строгого соответствия примерам \cite{Mooney 1996}. В деревьях принятия решений предпочтение (bias) отдаётся простым деревьям решений, в нейронных сетях -- линейным пороговым функциям, а в байесовском классификаторе -- функциям, учитывающим условную независимость свойств. Чем лучше “предпочтение” обучающегося алгоритма соответствует характеристикам конкретной задачи, тем лучше будет результат. Большинство обучающихся алгоритмов обладают “предпочтением” наподобие Бритвы Оккама, в таких алгоритмах выбираются гипотезы, которые могут быть представлены меньшим количеством информации на каком-нибудь языке представлений. Однако компактность, с которой (деревья решений, дизъюнктивная нормальная форма, сети с линейным пороговым значением) представляют конкретные функции -- может существенно различаться. Поэтому различные “предпочтительные” оценки могут работать лучше или хуже в конкретных задачах. Одной из основных целей в машинном обучении является поиск “предпочтений” с целью решения прикладных практических задач.
+\parindent=0,5cm
+
+Выбор правильного “предпочтения” и обучающегося алгоритма является сложной задачей. Простым подходом является автоматизация выбора метода при помощи внутренней перекрестной валидации. Другой подход meta-learning заключается в том, чтобы обучиться набору правил (или другому классификатору), предсказывающему, когда обучающийся алгоритм будет срабатывать наилучшим образом на примере с набором свойств присущих проблеме.
+\parindent=0,5cm
+
+Описанный в \cite{Mooney 1996} эксперимент заключается в определении значения слова \textit{line} (англ. линия) среди 6 возможных вариантов (строка, ряд, дивизия, телефон, веревка, продуктовая линия).  
+\parindent=0,5cm
+
+Для получения обучающей выборки брались предложения со словом line, и им в соответствие ставилось одно из 6 значений. Распределение значений неравномерно: включение в список иточников журнала The Wall Street Journal привело к тому, что одно из значений встречалось в 5 раз чаще остальных \cite{Leacock 1993}.
+\parindent=0,5cm
+
+\bfullwidth
+\begin{table}[H]
+\centering
+\caption{Шесть значений слова \textit{line} из Английского Викисловаря и Русского Викисловаря}
+\begin{tabular}{|m{2cm}|m{2cm}|m{6cm}|m{4cm}|}
+
+\hline
+\textbf{ключевое слово} & \textbf{перевод} & \textbf{толкование на английском (Английский Викисловарь)} & \textbf{толкование на русском (Русский Викисловарь)}\\
+\hline
+text & строка & A small amount of text & ряд слов, букв или иных знаков, написанных или напечатанных в одну линию \\
+\hline
+formation & ряд & A more-or-less straight sequence of people, objects, etc., either arranged as a queue or column and often waiting to be processed or dealt with, or arranged abreast of one another in a row (and contrasted with a column), as in a military formation & несколько объектов, расположенных в линию или следующих один за другим\\
+\hline
+division & дивизия & A formation, usually made up of two or three brigades & тактическое воинское соединение \\
+\hline
+phone & телефон & The wire connecting one telegraphic station with another, a telephone or internet cable between two points: a telephone or network connection & то же, что телефонный номер \\
+\hline
+cord & веревка & A rope, cord, string, or thread, of any thickness  & гибкое и длинное изделие, — чаще всего сплетённое или свитое из льняных (или пеньковых, полимерных и т. п.) волокон или прядей \\
+\hline
+product & продуктовая линия & The products or services sold by a business, or by extension, the business itself & совокупность однородной продукции единого назначения  \\
+\hline
+\end{tabular}
+\label{tbl5}
+\end{table}
+\efullwidth
+\parindent=0,5cm
+
+В работе \cite{Charles 1993} было установлено, что наиболее эффективными при решении задачи WSD являются алгоритмы на основе дерева решений (decision tree) . Данный класс методов обходил по точности и скорости работы класс нейронных сетей. Другие исследования \cite{Mooney 1995} показали, что класс методов индуктивного логического программирования (inductive logic programming) справляется с задачей разрешения лексической многозначности слова лучше алгоритмов на основе дерева решений. 
+\parindent=0,5cm
+
+В серии экспериментов в \cite{Mooney 1996} сравнивались следующие методы: байесовский классификатор, перцептрон, C4.5, метод k-ближайших соседей и модификации алгоритма FOIL: PFOIL-DLIST, PROIL-DNF, PFOIL-CNF. Все алгоритмы были реализованы на языке Common Lisp, за исключением C4.5, который был написан на языке C.
+\parindent=0,5cm
+
+После проведения сравнительных экспериментов, заключавшихся в обучении и определении значения слова \textit{line,} было выяснено, что байесовский классификатор и перцептрон работают точнее других рассмотренных методов. 
+\parindent=0,5cm
+
+Эксперименты проводились с разными размерами обучающей выборки для того, чтобы выяснить, какого рода зависимость имеет место между точностью определения значения и размером выборки. На рисунке ~\ref{kor1} отображена зависимость точности работы алгоритмов от размера выборки. При увеличении размера обучающей выборки сначала происходит резкий рост точности, последующий прирост точности становится незначительным.
+
+\begin{figure}[H]
+\includegraphics[keepaspectratio=true,
+ width=0.9\columnwidth]{p1.png}
+\caption{Рост точности решения WSD задачи для разных алгоритмов (определение значения слова \textit{line}) при увеличении размера обучающей выборки \cite{Mooney 1996}. Алгоритмы: PFOIL-DLIST, PROIL-DNF, PFOIL-CNF, C4.5, Naive Bayes -- наивный баейсовский классификатор; Perceptron -- персептрон; 3 Nearest Neighbor -- метод 3-х ближайших соседей}
+\label{kor1}
+\end{figure}
+
+Эксперименты учитывали не только точность определения значения, но и требовательность алгоритма к ресурсам в процессе обучения и работы. На рисунке ~\ref{kor2} можно увидеть зависимость времени обучения от размера выборки. Самыми быстрообучаемыми оказались байесовский классификатор и перцептрон, а самыми медленными -- нормальные формы (рис. ~\ref{kor2}).
+
+\begin{figure}[H]
+\includegraphics[keepaspectratio=true,
+ width=0.9\columnwidth]{p2.png}
+\caption{Зависимость времени затраченного на обучение алгоритмов от размера обучающей выборки \cite{Mooney 1996}. Алгоритмы: PFOIL-DLIST, PROIL-DNF, PFOIL-CNF, C4.5, Naive Bayes -- наивный баейсовский классификатор; Perceptron -- персептрон; 3 Nearest Neighbor -- метод 3-х ближайших соседей}
+\label{kor2}
+\end{figure}
+
+На рисунке ~\ref{kor3} представлена зависимость времени работы алгоритмов от размера обучающей выборки. Время работы алгоритмов дает другую картину: байесовский классификатор и перцептрон работают долго при максимальном размере обучающей выборки, в то время как остальные методы решают WSD задачу за постоянное время (рис. ~\ref{kor3}). 
+
+\begin{figure}[H]
+\includegraphics[keepaspectratio=true,
+ width=0.9\columnwidth]{p3.png}
+\caption{Зависимость времени работы алгоритмов от размера обучающей выборки при определении значения слова \textit{line} \cite{Mooney 1996}. Алгоритмы: PFOIL-DLIST, PROIL-DNF, PFOIL-CNF, C4.5, Naive Bayes -- наивный баейсовский классификатор; Perceptron -- персептрон; 3 Nearest Neighbor -- метод 3-х ближайших соседей}
+\label{kor3}
+\end{figure}
 
 \section{<<Разрешение лексической многозначности методом ансамбля Байесовских классификаторов>>}
 
@@ -642,6 +726,9 @@ Y=A_1x+A_2x^2+\ldots +A_nx^n.
 \bibitem{COTTRELL 1983}
 \textit{COTTRELL, G. W. and SMALL, S. L.}A connectionist  scheme for modelling word  sense  disambiguation -- Cognition and brain theory. 1983. № 6. P. 89–120. 
 
+\bibitem{Charles 1993}
+\textit{Charles X. Ling, Marin Marinov}Answering the connectionist challenge: A symbolic model of learning the past tenses of English verbs,  Cognition, Elsevier, 1993
+
 \bibitem{Jain 1988}
 \textit{Jain, A. and Dubes, R.}Algorithms for Clustering Data. Prentice-Hall, Inc., Upper Saddle River, NJ, 1988.
 
@@ -656,6 +743,13 @@ Y=A_1x+A_2x^2+\ldots +A_nx^n.
 
 \bibitem{Miller 1990}
 \textit{Miller, G.}Wordnet: An on-line lexical database. International Journal of Lexicography, 3(4). 1990.
+
+\bibitem{Mooney 1996}
+\textit{Raymond J. Mooney}Comparative Experiments on Disambiguating Word Senses:
+An Illustration of the Role of Bias in Machine Learning, Department of Computer Sceinces, University of Texas, Austin, TX 78712-1188, 1996
+
+\bibitem{Mooney 1995}
+\textit{R. J. Mooney, M. E. Califf}Induction of First-Order Decision Lists: Results on Learning the Past Tense of English Verbs, Department of Computer Sceinces, University of Texas, Austin, TX 78712-1188, 1995
 
 \bibitem{Pedersen 2000}
 \textit{Pedersen, T.}A Simple Approach to Building Ensembles of Naive Bayesian Classi?ers for Word Sense Disambiguation// Department of Computer Science, University of Minnesota Duluth.–2000.
