--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -11,8 +11,8 @@
 \rustitle{Обзор методов (уточнить - каких?) \newline по решению задачи разрешения лексической многозначности}
 \engtitle{Word-sense disambiguation methods (specific?) review}
 
-\rusauthor{С.~С.~Ткач, Е.~А.~Ярышкина, А.~Н.~Кирилов, И.~А.~Сихонина, Н.~И.~Коржицкий}
-\engauthor{S.~S.~Tkach, E.~A.~Yaryshkina, A.~N.~Kirilov, I.~A.~Sikhonina, N.~I.~Korzhitsky}
+\rusauthor{С.~С.~Ткач, Е.~А.~Ярышкина, А.~Н.~Кирилов, И.~А.~Сихонина, Н.~И.~Коржицкий, А.~М.~Спирикова}
+\engauthor{S.~S.~Tkach, E.~A.~Yaryshkina, A.~N.~Kirilov, I.~A.~Sikhonina, N.~I.~Korzhitsky, A.~M.~Spirikova}
 
 
 \organization{Институт прикладных математических исследований Карельского научного центра РАН}
@@ -311,7 +311,7 @@ total & 2368\\
 \section{<<Различение значений слов на основе векторов свойств, расширенных словарными толкованиями>>}
 
 \begin{flushright}
-\textit{А. Спирикова} 
+\textit{А. М. Спирикова} 
 \end{flushright}
 
 Амрута Пурандаре и Тед Педерсен в 2004 году разработали "Алгоритм различения значений на основе контекстных векторов" (Сontext vector sense discrimination) \cite{Purandare 2004}. В этом алгоритме (1) берется набор примеров употреблений исследуемого слова, (2) выполняется кластеризация этих примеров так, чтобы близкие по значению или связанные каким-либо образом слова объединились в одну группу \cite{Purandare 2004}.
@@ -816,6 +816,26 @@ tel.: (8142) 766312
 \end{aboutauthors}
 
 \begin{aboutauthors}
+\authorsname{Коржицкий Никита Иванович}
+Студент\\
+Математический факультет\\ 
+Петрозаводский государственный университет\\
+пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
+тел.: +7(8142) 71-10-78\\
+nikita@nikita.tv
+
+\columnbreak
+
+\authorsname{Korzhitsky, Nikita}
+Student\\
+Faculty of Mathematics\\
+Petrozavodsk State University\\
+Prospect Lenina, 33, Petrozavodsk, Republic of Karelia\\
+tel.: +7(8142) 71-10-78\\
+nikita@nikita.tv 
+\end{aboutauthors}
+
+\begin{aboutauthors}
 \authorsname{Румянцев Александр Cергеевич}
 аспирант\\ 
 Институт прикладных математических исследований КарНЦ РАН\\ 
@@ -834,6 +854,7 @@ tel.: (8142) 763370
 
 \begin{aboutauthors}
 \authorsname{Сихонина Ирина Александровна}
+Студентка\\
 Математический факультет\\ 
 Петрозаводский государственный университет\\
 пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
@@ -852,7 +873,28 @@ syawenka@mail.ru
 \end{aboutauthors}
 
 \begin{aboutauthors}
+\authorsname{Спиркова Анна Михайловна}
+Студентка\\
+Математический факультет\\ 
+Петрозаводский государственный университет\\
+пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
+тел.: +7(8142) 71-10-78\\
+annspirkova@gmail.com
+
+\columnbreak
+
+\authorsname{Spirikova, Anna}
+Student\\
+Faculty of Mathematics\\
+Petrozavodsk State University\\
+Prospect Lenina, 33, Petrozavodsk, Republic of Karelia\\
+tel.: +7(8142) 71-10-78\\
+annspirkova@gmail.com
+\end{aboutauthors}
+
+\begin{aboutauthors}
 \authorsname{Ткач Станислав Сергеевич}
+Студент\\
 Математический факультет\\ 
 Петрозаводский государственный университет\\
 пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
