Добавил обзор Дарьи

--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -2,6 +2,22 @@
 \usepackage{krctran}
 \usepackage{textcomp}
 \usepackage{xcolor}
+\usepackage{algorithm2e}
+\SetKwInput{KwData}{Исходные параметры}
+\SetKwInput{KwResult}{Результат}
+\SetKwInput{KwIn}{Входные данные}
+\SetKwInput{KwOut}{Выходные данные}
+\SetKwIF{If}{ElseIf}{Else}{если}{тогда}{иначе\ если}{иначе}{конец\ условия}
+\SetKwFor{While}{до\ тех\ пор,\ пока}{выполнять}{конец\ цикла}
+\SetKw{KwTo}{от}
+\SetKw{KwRet}{возвратить}
+\SetKw{Return}{возвратить}
+\SetKwBlock{Begin}{начало\ блока}{конец\ блока}
+\SetKwSwitch{Switch}{Case}{Other}{Проверить\ значение}{и\ выполнить}{вариант}{в\ противном\ случае}{конец\ варианта}{конец\ проверки\ значений}
+\SetKwFor{For}{цикл}{выполнять}{конец\ цикла}
+\SetKwFor{ForEach}{для\ каждого}{выполнять}{конец\ цикла}
+\SetKwRepeat{Repeat}{повторять}{до\ тех\ пор,\ пока}
+\SetAlgorithmName{Алгоритм}{алгоритм}{Список алгоритмов}
 
 \begin{document}
 
@@ -345,7 +361,7 @@ total & 2368\\
 \bfullwidth
 \begin{table}[H]
 \centering
-\caption{Словарные толкования (и содержательные слова) по данным статьи <<история>> из Русского Викисловаря. Серым цветом и курсивом выделены те слова, которые уже были в векторе слов, чёрным – новые слова из толкований, которыми будет расширен вектор.}
+\caption{Словарные толкования (и содержательные слова) по данным статьи <<история>> из Русского Викисловаря. Серым цветом и курсивом выделены те слова, которые уже были в векторе слов, чёрным – новые слова из толкований, которыми будет расширен вектор}
 \begin{tabular}{|c|m{10cm}|m{5cm}|}
 
 \hline
@@ -433,6 +449,141 @@ total & 2368\\
 \parindent=0,5cm
 
 Использование целиком текста аннотации статьи в качестве контекста приводит к лучшим результатам, чем использование отдельных предложений. С одной стороны, большой объем контекста, представленный аннотацией, дает богатую коллекцию признаков, с другой стороны, в коллекции WSD представлено небольшое число контекстов.
+
+\section{<<Выявление значений слов из текста>>}
+\begin{flushright}
+\textit{Д. Ю. Янкевич} 
+\end{flushright}
+
+В статье \cite{Pantel 2002} представлен алгоритм автоматического обнаружения значений слов в тексте, названный \textit{Кластеризация посредством комитетов} (Clustering By Committee (CBC)). Также авторы предлагают методологию оценки для автоматического измерения точности и полноты найденных значений.
+
+\section{Алгоритм}
+
+\parindent=0,5cm
+
+Алгоритм первоначально находит множество небольших кластеров, называемых комитетами, каждый из которых представляет собой одно из значений определяемого слова. Центр тяжести  членов комитета (мера связности с определяемым словом) используется в качестве вектора признаков кластера.
+\parindent=0,5cm
+
+CBC состоит из трех этапов.
+\parindent=0,5cm
+
+На этапе I для каждого элемента (слова) вычисляются $k$ наиболее похожих слов. Сначала весь список относящихся к слову значений сортируется по убыванию значений связи согласно формуле точечной взаимной информации (pointwise mutual information (PMI) \cite{Manning 1999}), а затем, с помощью иерархического кластерного анализа по \textit{методу средней связи} \cite{Kim 1989}, вычисляется сходство между всеми элементами кластера попарно. Значение функции PMI \cite{Manning 1999} между предполагаемым значением слова (контекстом) и элементом (словом) вычисляется следующим образом: пусть x -- это рассматриваемый элемент, а y -- контекст. \textit{Точечная взаимная информация} между x и y определена как:
+
+$pmi(x;y)\equiv log \frac{p(x,y)}{p(x)p(y)}=log\frac{p(x|y)}{p(x)}=log\frac{p(y|x)}{p(y)}$
+\parindent=0,5cm
+
+При кластеризации посредством метода средних связей \textit{(average-link clustering)} вычисляется среднее сходство между данным объектом и всеми объектами в кластере, а затем, если найденное \textit{среднее значение сходства} достигает или превосходит некоторый заданный пороговый уровень сходства, объект присоединяется к этому кластеру \cite{Kim 1989}. Сложность этого алгоритма $O(n^2 * log (n))$, где $n$ -- число кластеризуемых элементов \cite{Jain 1999}.
+\parindent=0,5cm
+
+В этапе I оценка (PMI) означает предпочтение большим и тесно связанным кластерам.
+\parindent=0,5cm
+
+На II этапе строится набор небольших кластеров, где элементы каждого кластера образуют комитет. В ходе работы “Алгоритма 1” формируется как можно больше комитетов при условии, что каждый вновь созданный комитет не слишком похож на любой из уже существующих комитетов. Если условие нарушается, комитет просто отбрасывается. Алгоритм описан ниже подробно.
+
+\bfullwidth
+\begin{algorithm}[H]
+\SetAlgoLined
+\KwData{Список элементов $E$, которые будут сгруппированы, база данных сходства $S$, из фазы I, пороги $\theta1$ и $\theta2$ (с помощью порога $\theta1$ сохраняются только те кластеры, которые имеют значения, отличные от ранее обнаруженных, порог $\theta2$ позволяет обнаружить элементы, не принадлежащие ни одному из кластеров)}
+\KwResult{$C$ -- список комитетов}
+\textbf{Шаг 1:}\\
+\ForEach{$е \in E$}{\begin{enumerate}
+\item Кластер k наиболее “близких” (похожих) элементов е из S с помощью метода  средней связи
+\item Для каждого обнаруженного кластера $c$ вычислить следующую оценку:
+$val = | C | * avgsim(c)$, где $| C |$ -- количество элементов $c$ и $avgsim(c)$ -- усреднённое сходство между всеми парами элементов кластера $c$.
+\item Записать кластер с наивысшей оценкой в список $L$\end{enumerate}}
+\textbf{Шаг 2:}\\
+Сортировка кластеров в списке $L$ в порядке убывания их оценок $val$\\
+\textbf{Шаг 3:}\\
+$C = \emptyset$ // Пусть $С$ перечень комитетов, изначально пустой\\
+\ForEach{$c \in L$}{// в отсортированном по убыванию порядке:
+\begin{enumerate}
+\item Вычислить центр тяжести, усредняя поэлементно значение векторов, и вычислить вектор  PMI центроида (точно так же, как мы делали для отдельных элементов)
+\item Если схожесть $c$ и центроида каждого комитета, ранее добавленного к $C$, ниже порогового $\theta1$, то следует добавить $c$ в $C$
+\end{enumerate}}
+\textbf{Шаг 4:}\\
+\If{$C=\emptyset$}{\Return $C$}
+$R = \emptyset$ // $R$ -- это множество остатков, то есть элементов, не охваченных ни одним из кластеров\\
+\ForEach{$e \in E$}{\ForEach{$c \in C$}{\If{$sim(e, c) < \theta2$ // $sim(e,c)$ -- схожесть $e$ каждому комитету из $C$}{$R += e$ // то следует добавить $e$ в список остатков $R$}}}
+\If{$R=\emptyset$}{\Return $C$ \Else{\Return $C \cup Algorithm1(R, S, \theta1, \theta2)$}}
+\caption{II фаза CBC}
+\label{alg}
+\end{algorithm}
+\efullwidth
+
+В результате второго этапа построения CBC остаются кластеры, связанные более тесно (имеющие большее значение val, см. Шаг 1 и 3 Алгоритма ~\ref{alg}).
+\parindent=0,5cm
+
+На заключительном III этапе работы алгоритма каждый элемент e присваивается наиболее подходящему кластеру следующим образом (при этом центроид членов комитета используется в качестве вектора характеристик кластера):
+
+\bfullwidth
+\begin{algorithm}[H]
+\SetAlgoLined
+
+\KwResult{Итоговые кластеры с максимальным значением связи (val) между словами}
+Пусть $С$ список кластеров (изначально пустых)\\
+Пусть $S$ это топ-200 кластеров, схожих с $e$\\
+\While{$S$ не пуст}{пусть $c \in S$ наиболее близкий кластер к $e$\\
+\If{сходство $(e, c) < \sigma$}{\textbf{конец цикла}}
+\If{$c$ не схож ни с одним кластером в $C$}{присвоить $e$ к $c$\\
+удалить из $e$ его характеристики, которые перекрываются с характеристиками $c$}
+удалить $c$ из $S$
+}
+\label{alg1}
+\end{algorithm}
+\efullwidth
+
+На III этапе кластер сохраняется только в случае, если его сходство со всеми ранее полученными кластерами ниже установленного порогового значения.
+\parindent=0,5cm
+
+Согласно дистрибутивной гипотезе (Distributional Hypothesis) \cite{Harris 1985} слова, употребляемые в сходных контекстах, близки по смыслу. Алгоритм \textit{Кластеризации посредством комитетов} \cite{Pantel 2002} разрешает лексическую многозначность, группируя слова согласно сходству их контекстов. Каждому полученному кластеру соответствует одно из значений слова.
+\parindent=0,5cm
+
+В таблице~\ref{yank} каждая запись показывает кластеры, которым принадлежит заглавное слово. Имена для кластеров Nq34, Nq137, $\ldots$ генерируются автоматически. После каждого имени кластера находится число, обозначающее сходство между кластером и заглавным словом (т.е. рукав, сердце и одежда). Далее перечисляются четыре слова, наиболее близкие центроиду кластера. Каждый кластер соответствует одному значению заглавного слова. Например, Nq34 соответствует значению <<деталь одежды>>, а Nq137 соответствует значению <<ответвление русла реки>>.
+
+\begin{table}[H]
+\caption{Для построения кластеров использовались данные словарных статей Викисловаря: “одежда”,  “рукав” и  “сердце”}
+\begin{tabular}{|c|}
+\hline
+(Рукав
+\tabularnewline
+Nq34 0.39 (деталь, манжета, полотно)
+\tabularnewline
+Nq137 0.20 (протока, русло, отмель, поток)
+\tabularnewline
+Nq217 0.18 (шланг, труба, огнетушитель)
+\tabularnewline
+)
+\tabularnewline
+(Сердце 
+\tabularnewline
+Nq72  0.27 (орган, костный мозг, почка)
+\tabularnewline
+Nq866 0.17 (душа, рассудок, сознание)
+\tabularnewline
+)
+\tabularnewline
+(Одежда
+\tabularnewline
+Nq215 0.41 (мануфактура, юбка, брюки)
+\tabularnewline
+Nq235 0.20 (покрытие, оболочка, дорога)
+\tabularnewline
+)
+ \\
+\hline
+\end{tabular}
+\label{yank}
+\end{table}
+
+\section{Сравнение с алгоритмом UNICON}
+
+CBC является разновидностью алгоритма UNICON \cite{Lin 2001}, который также строит центроид кластера, используя небольшой набор похожих элементов.
+\parindent=0,5cm
+
+Одним из основных различий между UNICON и CBC является то, что UNICON гарантирует, что различные комитеты не имеют одинаковых элементов, тем не менее, центры тяжести двух комитетов по-прежнему могут быть очень близкими (похожими). В UNICON'е эта проблема решается объединением таких кластеров. В отличие от этого, на II этапе CBC создаются только те комитеты, центры тяжести которых отличны от всех ранее созданных комитетов.
+\parindent=0,5cm
+
+Есть разница и на III этапе CBC. Алгоритм UNICON плохо работает со словами, которые имеют несколько широко используемых (доминирующих) значений. Например, пусть значение “отмычка” является более употребимым для слова “ключ”, чем значение “водный источник”. Приведём смесь слов-синонимов к разным значениям слова “ключ”: пневмоключ, электроключ, родник, родничок, источник, криница, гидроключ, ключик, тангента, треншальтер, тумблер, знак, контролька, отпирка, виброплекс, шифр. В этом списке 10 значений относятся к значению “отмычка()”, 4 к “водный источник()” и 2 к значению “знак()”. По этому списку алгоритмом UNICON будут сгенерированы кластеры “отмычка”, “шифрование”, “происхождение”,“криптография”, “кнопка”, “водный источник”,“переключатель”, “намёк”. Сходство между словом и полученными кластерами  является очень низким, к тому же есть кластеры, содержащие одинаковые слова. С другой стороны, CBC удаляет “пересекающиеся” (общие для двух кластеров) характеристики после того, как присвоит значение кластеру (допустим характеристики, относящиеся к значению “отмычка” слова “ключ” из вектора характеристик “отмычка”). В результате, сходство между  кластером “водный источник” \{родник, родничок, источник, криница\} и пересмотренным вектором характеристик кластера “водный источник” становится намного выше. Что в свою очередь приводит к тому, что кластеры становятся гораздо точнее.
 
 \section{WSD-методы, основанные на знаниях}
 \section{<<Построение сочетаемостных ограничений на основе Байесовских сетей для разрешения многозначности>>}
@@ -708,6 +859,9 @@ Y=A_1x+A_2x^2+\ldots +A_nx^n.
 \bibitem{Averin 2006}
 \textit{Аверин, А.Н.} Разработка сервиса поиска биграмм // Труды международной конференции «Корпусная лингвистика–2006. СПб., С.Петерб. ун-та., 2006.
 
+\bibitem{Kim 1989}
+\textit{Ким Дж. О., Мьюллер Ч.У., Клекка У.Р.} 1989.Факторный, дискриминантный и кластерный анализ. Стр.172. “Финансы и статистика”, Москва, Россия.
+
 \bibitem{epr:website}
 \textit{Епрев, А. С.}Применение контекстных векторов в классификации текстовых документов. 2010. http://jre.cplire.ru/iso/oct10/1/text.html
 
@@ -729,6 +883,9 @@ Y=A_1x+A_2x^2+\ldots +A_nx^n.
 \bibitem{Charles 1993}
 \textit{Charles X. Ling, Marin Marinov}Answering the connectionist challenge: A symbolic model of learning the past tenses of English verbs,  Cognition, Elsevier, 1993
 
+\bibitem{Harris 1985}
+\textit{Harris, Z.}Distributional structure. In: Katz, J. J. (ed.) The Philosophy of Linguistics. New York: Oxford University Press. 1985. pp. 26–47
+
 \bibitem{Jain 1988}
 \textit{Jain, A. and Dubes, R.}Algorithms for Clustering Data. Prentice-Hall, Inc., Upper Saddle River, NJ, 1988.
 
@@ -739,7 +896,13 @@ Y=A_1x+A_2x^2+\ldots +A_nx^n.
 \textit{C. Leacock, G. Towell, and E. Voorhees.}Corpus-based statistical sense resolution. In Proceedings of the ARPA Workshop on Human Language Technology, pages 260–265, March. 1993. 
 
 \bibitem{LESK 1986}
-\textit{LESK, M.}Automatic sense disambiguation using machine readable dictionaries: How to tell a pine cone from an ice cream cone --  Proceedings  of  the 5th SIGDOC. New York. 1986. P. 24–26.  
+\textit{LESK, M.}Automatic sense disambiguation using machine readable dictionaries: How to tell a pine cone from an ice cream cone --  Proceedings  of  the 5th SIGDOC. New York. 1986. P. 24–26. 
+
+\bibitem{Lin 2001}
+\textit{Lin, D. and Pantel, P}2001. Induction of semantic classes from natural language text. In Proceedings of SIGKDD-01. pp. 317–322. San Francisco, CA  
+
+\bibitem{Manning 1999}
+\textit{Manning, C. D. and Sch?tze, H.}1999. Foundations of Statistical Natural Language Processing. MIT Press.
 
 \bibitem{Miller 1990}
 \textit{Miller, G.}Wordnet: An on-line lexical database. International Journal of Lexicography, 3(4). 1990.
@@ -750,6 +913,9 @@ An Illustration of the Role of Bias in Machine Learning, Department of Computer 
 
 \bibitem{Mooney 1995}
 \textit{R. J. Mooney, M. E. Califf}Induction of First-Order Decision Lists: Results on Learning the Past Tense of English Verbs, Department of Computer Sceinces, University of Texas, Austin, TX 78712-1188, 1995
+
+\bibitem{Pantel 2002}
+\textit{Patrick Pantel, Dekang Lin}Discovering Word Senses from Text. University of Alberta. Department of Computing Science Edmonton, Alberta T6H 2E1 Canada, 2002.
 
 \bibitem{Pedersen 2000}
 \textit{Pedersen, T.}A Simple Approach to Building Ensembles of Naive Bayesian Classi?ers for Word Sense Disambiguation// Department of Computer Science, University of Minnesota Duluth.–2000.
