добавил все данные

--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -12,8 +12,8 @@
 \rustitle{Обзор методов и алгоритмов \newline по решению задачи разрешения лексической многозначности}
 \engtitle{Word-sense disambiguation methods and algorithms review}
 
-\rusauthor{С.~С.~Ткач, Е.~А.~Ярышкина, А.~Н.~Кириллов, И.~А.~Сихонина, Н.~И.~Коржицкий, А.~М.~Спирикова, А.~Л.~Чухарев, Т.~В.~Каушинис, А.~А.~Крижановский}
-\engauthor{S.~S.~Tkach, E.~A.~Yaryshkina, A.~N.~Kirillov, I.~A.~Sikhonina, N.~I.~Korzhitsky, A.~M.~Spirikova, A.~L.~Chuharev, T.~V.~Kaushinis, A.~A.~Krizhanovsky}
+\rusauthor{С.~С.~Ткач, Е.~А.~Ярышкина, А.~Н.~Кириллов, И.~А.~Сихонина, Н.~И.~Коржицкий, А.~М.~Спирикова, А.~Л.~Чухарев, Т.~В.~Каушинис, А.~А.~Крижановский, Д.~С.~Шорец, Д.~Ю.~Янкевич}
+\engauthor{S.~S.~Tkach, E.~A.~Yaryshkina, A.~N.~Kirillov, I.~A.~Sikhonina, N.~I.~Korzhitsky, A.~M.~Spirikova, A.~L.~Chuharev, T.~V.~Kaushinis, A.~A.~Krizhanovsky, D.~S.~Shorets, D.~Y.~Yankevich}
 
 
 \organization{Институт прикладных математических исследований Карельского научного центра РАН}
@@ -986,6 +986,26 @@ tel.: (8142) 766312
 \end{aboutauthors}
 
 \begin{aboutauthors}
+\authorsname{Шорец Дарья Сергеевна}
+Студентка\\ 
+Математический факультет\\ 
+Петрозаводский государственный университет\\
+пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
++7 (8142) 71-10-78\\
+da\_sha1078@mail.ru
+
+\columnbreak
+
+\authorsname{Shorets, Daria}
+Student\\
+Faculty of Mathematics\\
+Petrozavodsk State University\\
+Prospect Lenina, 33, Petrozavodsk, Republic of Karelia\\
++7 (8142) 71-10-78\\
+da\_sha1078@mail.ru
+\end{aboutauthors}
+
+\begin{aboutauthors}
 \authorsname{Ярышкина Екатерина Александровна}
 Студентка\\ 
 Математический факультет\\ 
@@ -1004,4 +1024,23 @@ Prospect Lenina, 33, Petrozavodsk, Republic of Karelia\\
 +7 (8142) 71-10-78\\
 kate.rysh@gmail.com 
 \end{aboutauthors}
+
+\begin{aboutauthors}
+\authorsname{Янкевич Дарья Юрьевна}
+Студентка\\ 
+Математический факультет\\ 
+Петрозаводский государственный университет\\
+пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
++7 (8142) 71-10-78\\
+
+\columnbreak
+
+\authorsname{Yankevich, Daria}
+Student\\
+Faculty of Mathematics\\
+Petrozavodsk State University\\
+Prospect Lenina, 33, Petrozavodsk, Republic of Karelia\\
++7 (8142) 71-10-78\\ 
+\end{aboutauthors}
+
 \end{document}
